--- a/_sass/portfolio-dark-theme.scss
+++ b/_sass/portfolio-dark-theme.scss
@@ -462,7 +462,7 @@ img {
 .slideshow-container {
   position: relative;
   width: 100%;
-  max-height: 70vh;
+  max-height: 45vh;
   overflow: hidden;
 }
 
@@ -666,6 +666,10 @@ a, button, [role="button"] {
 
   .slideshow-menu a:not(:last-child)::after {
     content: none;
+  }
+
+  .slideshow-container {
+    max-height: 50vh;
   }
 
   .downloads {
