--- a/_sass/portfolio-dark-theme.scss
+++ b/_sass/portfolio-dark-theme.scss
@@ -101,6 +101,7 @@ body {
   flex-direction: column;
   overflow-x: hidden;
   width: 100%;
+  max-width: 100vw;
 }
 
 /* Global text wrapping and overflow handling
