--- a/_sass/portfolio-dark-theme.scss
+++ b/_sass/portfolio-dark-theme.scss
@@ -455,6 +455,28 @@ img {
   margin: 0;
 }
 
+/* Main Navigation - Simple Link List
+   ========================================================================== */
+.main-navigation {
+  text-align: center;
+  padding: var(--space-8) 0;
+  border-top: var(--border-width) solid var(--color-border);
+  border-bottom: var(--border-width) solid var(--color-border);
+  margin-bottom: var(--space-16);
+}
+
+.main-navigation a {
+  display: inline;
+  margin: 0 var(--space-4);
+  font-size: var(--font-size-base);
+}
+
+.main-navigation a:not(:last-child)::after {
+  content: ' /';
+  margin-left: var(--space-4);
+  color: var(--color-text);
+}
+
 /* Slideshow Section
    ========================================================================== */
 .slideshow-section {
@@ -673,6 +695,15 @@ a, button, [role="button"] {
 
   .slideshow-container {
     max-height: 50vh;
+  }
+
+  .main-navigation a {
+    display: block;
+    margin: var(--space-2) 0;
+  }
+  
+  .main-navigation a:not(:last-child)::after {
+    content: none;
   }
 
   .downloads {
