--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -70,52 +70,65 @@
         <footer>
             <div class="footer-columns">
                 <div class="footer-column">
-                    <h3>Social</h3>
-                    <a href="https://behance.net/kvshvl" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logobehance.png" alt="">Behance</a>
-                    <a href="https://www.instagram.com/kvshvl" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logoinstagram.png" alt="">Instagram</a>
-                    <a href="https://www.linkedin.com/in/kvshvl" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logolinkedin.png" alt="">LinkedIn</a>
-                    <a href="https://kvshvl.medium.com" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logomedium.png" alt="">Medium</a>
-                    <a href="https://in.pinterest.com/kvshvl" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logopinterest.png" alt="">Pinterest</a>
-                    <a href="https://soundcloud.com/kvshvl" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logosoundcloud.png" alt="">Soundcloud</a>
-                    <a href="https://twitch.tv/kvshvl" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logotwitch.png" alt="">Twitch</a>
-                    <a href="https://twitter.com/kvshvl_" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logotwitter.png" alt="">Twitter</a>
-                    <a href="https://www.youtube.com/@kvshvl/videos" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logoyoutube.png" alt="">YouTube</a>
+                    <details>
+                        <summary>Social</summary>
+                        <a href="https://behance.net/kvshvl" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logobehance.png" alt="">Behance</a>
+                        <a href="https://www.instagram.com/kvshvl" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logoinstagram.png" alt="">Instagram</a>
+                        <a href="https://www.linkedin.com/in/kvshvl" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logolinkedin.png" alt="">LinkedIn</a>
+                        <a href="https://kvshvl.medium.com" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logomedium.png" alt="">Medium</a>
+                        <a href="https://in.pinterest.com/kvshvl" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logopinterest.png" alt="">Pinterest</a>
+                        <a href="https://soundcloud.com/kvshvl" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logosoundcloud.png" alt="">Soundcloud</a>
+                        <a href="https://twitch.tv/kvshvl" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logotwitch.png" alt="">Twitch</a>
+                        <a href="https://twitter.com/kvshvl_" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logotwitter.png" alt="">Twitter</a>
+                        <a href="https://www.youtube.com/@kvshvl/videos" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logoyoutube.png" alt="">YouTube</a>
+                    </details>
                 </div>
                 
                 <div class="footer-column">
-                    <h3>Platforms</h3>
-                    <a href="https://stock.adobe.com/contributor/212199501/KVSHVL" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logoadobe.png" alt="">Adobe Stock</a>
-                    <a href="https://airbnb.co.in/users/show/21563871" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logoairbnb.png" alt="">Airbnb</a>
-                    <a href="https://alamy.com/portfolio/kvshvl" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logoalamy.png" alt="">Alamy</a>
-                    <a href="https://kushalsamant.github.io/anthology.html">Anthology</a>
-                    <a href="https://contrado.com/stores/kvshvl" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logocontrado.png" alt="">Contrado</a>
-                    <a href="https://github.com/kushalsamant" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logogithub.png" alt="">GitHub</a>
-                    <a href="https://github.com/sponsors/kushalsamant" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logogithub.png" alt="">GitHub Sponsors</a>
-                    <a href="https://kvshvl.gumroad.com" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logogumroad.png" alt="">Gumroad</a>
-                    <a href="https://patreon.com/c/kvshvl" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logopatreon.png" alt="">Patreon</a>
-                    <a href="https://kvshvl.setmore.com" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logosetmore.png" alt="">Setmore</a>
-                    <a href="https://311290.myshopify.com" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logoshopify.png" alt="">Shopify</a>
-                    <a href="https://shutterstock.com/g/kvshvl" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logoshutterstock.png" alt="">Shutterstock</a>
-                    <a href="https://unsplash.com/@kvshvl" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logounsplash.png" alt="">Unsplash</a>
-                    
-                    <h3 style="margin-top: 2rem;">Documentation Tools</h3>
-                    <details style="font-size: 0.75rem;">
-                        <summary style="cursor: pointer; margin-bottom: 0.5rem;">Visual documentation tools</summary>
-                        <p style="margin: 0.5rem 0; font-size: 0.75rem;">
-                            <strong>Video:</strong> <a href="https://videosoftdev.com" rel="noopener noreferrer" target="_blank">VSDC</a>, <a href="https://kapwing.com" rel="noopener noreferrer" target="_blank">Kapwing</a>, <a href="https://play.google.com/store/apps/details?id=com.camerasideas.instashot" rel="noopener noreferrer" target="_blank">Inshot</a><br>
-                            <strong>Photo:</strong> <a href="https://play.google.com/store/apps/details?id=com.vsco.cam" rel="noopener noreferrer" target="_blank">VSCO</a>, <a href="https://play.google.com/store/apps/details?id=com.niksoftware.snapseed" rel="noopener noreferrer" target="_blank">Snapseed</a>, <a href="https://play.google.com/store/apps/details?id=com.instagram.android" rel="noopener noreferrer" target="_blank">Instagram</a><br>
-                            <strong>Effects:</strong> <a href="https://play.google.com/store/apps/details?id=maa.vaporwave_editor_glitch_vhs_trippy_pro" rel="noopener noreferrer" target="_blank">Vaporgram Pro</a>, <a href="https://play.google.com/store/apps/details?id=kr.co.manhole.hujicam" rel="noopener noreferrer" target="_blank">Huji Cam</a>
-                        </p>
+                    <details>
+                        <summary>Platforms</summary>
+                        <a href="https://stock.adobe.com/contributor/212199501/KVSHVL" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logoadobe.png" alt="">Adobe Stock</a>
+                        <a href="https://airbnb.co.in/users/show/21563871" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logoairbnb.png" alt="">Airbnb</a>
+                        <a href="https://alamy.com/portfolio/kvshvl" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logoalamy.png" alt="">Alamy</a>
+                        <a href="https://kushalsamant.github.io/anthology.html">Anthology</a>
+                        <a href="https://contrado.com/stores/kvshvl" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logocontrado.png" alt="">Contrado</a>
+                        <a href="https://github.com/kushalsamant" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logogithub.png" alt="">GitHub</a>
+                        <a href="https://github.com/sponsors/kushalsamant" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logogithub.png" alt="">GitHub Sponsors</a>
+                        <a href="https://kvshvl.gumroad.com" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logogumroad.png" alt="">Gumroad</a>
+                        <a href="https://patreon.com/c/kvshvl" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logopatreon.png" alt="">Patreon</a>
+                        <a href="https://kvshvl.setmore.com" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logosetmore.png" alt="">Setmore</a>
+                        <a href="https://311290.myshopify.com" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logoshopify.png" alt="">Shopify</a>
+                        <a href="https://shutterstock.com/g/kvshvl" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logoshutterstock.png" alt="">Shutterstock</a>
+                        <a href="https://unsplash.com/@kvshvl" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logounsplash.png" alt="">Unsplash</a>
                     </details>
-                    
-                    <h3 style="margin-top: 2rem;">Legal</h3>
-                    <a href="https://www.kvshvl.in/cancellationandrefundpolicy.html">Cancellation and Refund Policy</a>
-                    <a href="https://www.kvshvl.in/privacypolicy.html">Privacy Policy</a>
-                    <a href="https://www.kvshvl.in/support.html">Support</a>
-                    <a href="https://www.kvshvl.in/termsofservice.html">Terms of Service</a>
-                    
-                    <p style="margin-top: 2rem; font-size: 0.75rem; color: #cccccc;">© {{ site.time | date: "%Y" }} Kushal Samant. All rights reserved.</p>
                 </div>
+                
+                <div class="footer-column">
+                    <details>
+                        <summary>Documentation Tools</summary>
+                        <div class="documentation-tools-content">
+                            <p>
+                                <strong>Video:</strong> <a href="https://videosoftdev.com" rel="noopener noreferrer" target="_blank">VSDC</a>, <a href="https://kapwing.com" rel="noopener noreferrer" target="_blank">Kapwing</a>, <a href="https://play.google.com/store/apps/details?id=com.camerasideas.instashot" rel="noopener noreferrer" target="_blank">Inshot</a><br>
+                                <strong>Photo:</strong> <a href="https://play.google.com/store/apps/details?id=com.vsco.cam" rel="noopener noreferrer" target="_blank">VSCO</a>, <a href="https://play.google.com/store/apps/details?id=com.niksoftware.snapseed" rel="noopener noreferrer" target="_blank">Snapseed</a>, <a href="https://play.google.com/store/apps/details?id=com.instagram.android" rel="noopener noreferrer" target="_blank">Instagram</a><br>
+                                <strong>Effects:</strong> <a href="https://play.google.com/store/apps/details?id=maa.vaporwave_editor_glitch_vhs_trippy_pro" rel="noopener noreferrer" target="_blank">Vaporgram Pro</a>, <a href="https://play.google.com/store/apps/details?id=kr.co.manhole.hujicam" rel="noopener noreferrer" target="_blank">Huji Cam</a>
+                            </p>
+                        </div>
+                    </details>
+                </div>
+                
+                <div class="footer-column">
+                    <details>
+                        <summary>Legal</summary>
+                        <a href="https://www.kvshvl.in/cancellationandrefundpolicy.html">Cancellation and Refund Policy</a>
+                        <a href="https://www.kvshvl.in/privacypolicy.html">Privacy Policy</a>
+                        <a href="https://www.kvshvl.in/support.html">Support</a>
+                        <a href="https://www.kvshvl.in/termsofservice.html">Terms of Service</a>
+                    </details>
+                </div>
+            </div>
+            
+            <div class="footer-copyright">
+                <p>© {{ site.time | date: "%Y" }} Kushal Samant. All rights reserved.</p>
             </div>
         </footer>
     </div>
