--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -92,48 +92,35 @@
             <div class="footer-columns">
                 <div class="footer-column">
                     <details>
-                        <summary>Social</summary>
-                        <a href="https://behance.net/kvshvl" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logobehance.png" alt="Behance">Behance</a>
-                        <a href="https://www.instagram.com/kvshvl" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logoinstagram.png" alt="Instagram">Instagram</a>
-                        <a href="https://www.linkedin.com/in/kvshvl" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logolinkedin.png" alt="LinkedIn">LinkedIn</a>
-                        <a href="https://kvshvl.medium.com" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logomedium.png" alt="Medium">Medium</a>
-                        <a href="https://in.pinterest.com/kvshvl" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logopinterest.png" alt="Pinterest">Pinterest</a>
-                        <a href="https://soundcloud.com/kvshvl" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logosoundcloud.png" alt="Soundcloud">Soundcloud</a>
-                        <a href="https://twitch.tv/kvshvl" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logotwitch.png" alt="Twitch">Twitch</a>
-                        <a href="https://twitter.com/kvshvl_" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logotwitter.png" alt="Twitter">Twitter</a>
-                        <a href="https://www.youtube.com/@kvshvl/videos" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logoyoutube.png" alt="YouTube">YouTube</a>
-                    </details>
-                </div>
-                
-                <div class="footer-column">
-                    <details>
-                        <summary>Platforms</summary>
+                        <summary>Links</summary>
                         <a href="https://stock.adobe.com/contributor/212199501/KVSHVL" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logoadobe.png" alt="Adobe Stock">Adobe Stock</a>
                         <a href="https://airbnb.co.in/users/show/21563871" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logoairbnb.png" alt="Airbnb">Airbnb</a>
                         <a href="https://alamy.com/portfolio/kvshvl" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logoalamy.png" alt="Alamy">Alamy</a>
+                        <a href="https://behance.net/kvshvl" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logobehance.png" alt="Behance">Behance</a>
                         <a href="https://contrado.com/stores/kvshvl" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logocontrado.png" alt="Contrado">Contrado</a>
                         <a href="https://github.com/kushalsamant" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logogithub.png" alt="GitHub">GitHub</a>
                         <a href="https://github.com/sponsors/kushalsamant" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logogithub.png" alt="GitHub Sponsors">GitHub Sponsors</a>
                         <a href="https://kvshvl.gumroad.com" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logogumroad.png" alt="Gumroad">Gumroad</a>
+                        <a href="https://play.google.com/store/apps/details?id=kr.co.manhole.hujicam" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logohujicam.png" alt="Huji Cam">Huji Cam</a>
+                        <a href="https://play.google.com/store/apps/details?id=com.camerasideas.instashot" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logoinshot.png" alt="Inshot">Inshot</a>
+                        <a href="https://www.instagram.com/kvshvl" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logoinstagram.png" alt="Instagram">Instagram</a>
+                        <a href="https://kapwing.com" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logokapwing.png" alt="Kapwing">Kapwing</a>
+                        <a href="https://www.linkedin.com/in/kvshvl" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logolinkedin.png" alt="LinkedIn">LinkedIn</a>
+                        <a href="https://kvshvl.medium.com" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logomedium.png" alt="Medium">Medium</a>
                         <a href="https://patreon.com/c/kvshvl" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logopatreon.png" alt="Patreon">Patreon</a>
+                        <a href="https://in.pinterest.com/kvshvl" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logopinterest.png" alt="Pinterest">Pinterest</a>
                         <a href="https://kvshvl.setmore.com" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logosetmore.png" alt="Setmore">Setmore</a>
                         <a href="https://311290.myshopify.com" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logoshopify.png" alt="Shopify">Shopify</a>
                         <a href="https://shutterstock.com/g/kvshvl" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logoshutterstock.png" alt="Shutterstock">Shutterstock</a>
-                        <a href="https://unsplash.com/@kvshvl" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logounsplash.png" alt="Unsplash">Unsplash</a>
-                    </details>
-                </div>
-                
-                <div class="footer-column">
-                    <details>
-                        <summary>Documentation Tools</summary>
-                        <a href="https://videosoftdev.com" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logovsdc.png" alt="VSDC">VSDC</a>
-                        <a href="https://kapwing.com" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logokapwing.png" alt="Kapwing">Kapwing</a>
-                        <a href="https://play.google.com/store/apps/details?id=com.camerasideas.instashot" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logoinshot.png" alt="Inshot">Inshot</a>
-                        <a href="https://play.google.com/store/apps/details?id=com.vsco.cam" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logovsco.png" alt="VSCO">VSCO</a>
                         <a href="https://play.google.com/store/apps/details?id=com.niksoftware.snapseed" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logosnapseed.png" alt="Snapseed">Snapseed</a>
-                        <a href="https://play.google.com/store/apps/details?id=com.instagram.android" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logoinstagram.png" alt="Instagram">Instagram</a>
+                        <a href="https://soundcloud.com/kvshvl" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logosoundcloud.png" alt="Soundcloud">Soundcloud</a>
+                        <a href="https://twitch.tv/kvshvl" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logotwitch.png" alt="Twitch">Twitch</a>
+                        <a href="https://twitter.com/kvshvl_" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logotwitter.png" alt="Twitter">Twitter</a>
+                        <a href="https://unsplash.com/@kvshvl" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logounsplash.png" alt="Unsplash">Unsplash</a>
                         <a href="https://play.google.com/store/apps/details?id=maa.vaporwave_editor_glitch_vhs_trippy_pro" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logovaporgrampro.png" alt="Vaporgram Pro">Vaporgram Pro</a>
-                        <a href="https://play.google.com/store/apps/details?id=kr.co.manhole.hujicam" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logohujicam.png" alt="Huji Cam">Huji Cam</a>
+                        <a href="https://videosoftdev.com" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logovsdc.png" alt="VSDC">VSDC</a>
+                        <a href="https://play.google.com/store/apps/details?id=com.vsco.cam" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logovsco.png" alt="VSCO">VSCO</a>
+                        <a href="https://www.youtube.com/@kvshvl/videos" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logoyoutube.png" alt="YouTube">YouTube</a>
                     </details>
                 </div>
                 
