--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -76,7 +76,7 @@
     <!-- Skip to Content Link -->
     <a href="#main-content" class="skip-to-content">Skip to main content</a>
     
-    <div class="grid-container" style="background-color: rgba(0, 0, 0, 0.6); min-height: 100vh; color: #ffffff;">
+    <div class="grid-container" style="margin: 1rem; min-height: calc(100vh - 2rem); background-color: rgba(255, 255, 255, 0.25); color: #000000; backdrop-filter: blur(5px);">
         <header style="padding: 2rem 1rem;">
             <div class="grid-item">
                 <h1><a href="https://kushalsamant.github.io" style="color: #ffffff; text-decoration: none;">KVSHVL</a></h1>
