Fix grid-item background in CSS - remove all black boxes
- Changed .grid-item background-color from var(--color-background) to transparent
- This removes black boxes from all grid-item elements site-wide
- Only the main framed overlay (10% black) remains

--- a/_sass/portfolio-dark-theme.scss
+++ b/_sass/portfolio-dark-theme.scss
@@ -398,7 +398,7 @@ hr {
 }
 
 .grid-item {
-  background-color: var(--color-background);
+  background-color: transparent;
   border: none;
   margin: 0;
   padding: var(--space-12);
